tdf#160518 sw: fix DOCX import/export of hyphenation-keep

– export hyphenation-page="page" setting of native ODF documents,
  if hyphenation is enabled in the default paragraph or in
  the text body style with this setting. It's lossless for
  hyphenation-keep-type="column", while the other values are
  converted to hyphenation-keep-type="column", which is
  the default layout of MSO 2013 and later.

– fix LO roundtrip of DOCX documents which were created in MSO
  originally: while the roundtrip kept useWord2013TrackBottomHyphenation
  and allowHyphenationAtTrackBottom, the exported redundant
  suppressAutoHyphen = "false" settings of the paragraph
  resulted broken layout in Writer, because the repeated import
  overwrote every paragraphs with bad hyphenation setting
  (hyphenation-keep = "auto" instead of hyphenation-keep = "page").

– export also "Hyphenate CAPS" and "Hyphenation zone" settings,
  if hyphenation is enabled in text body style with these settings,
  and not in the default paragraph style. Setting hyphenation only
  in "Text Body" is more common in documents created in LibreOffice.

Follow-up to commit c8ee0e8f581b8a6e41b1a6b8aa4d40b442c1d463
"tdf160518 DOCX: import hyphenation-keep to fix layout".

Change-Id: I9dbaf1e37416758388e3b2b19db3317f3f5652b5
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/167749
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>